--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADAMBERE</title>
 </head>
-<body>
+<body style="background-color:#f5f5f5;">
 <H1>ADAMBERE</H1>
-<img src="IMAGE/DSC_4657.jpg" alt="">
+<img src="IMAGE/iphone_pro-01de.jpg" alt="">
 <P>create new apps here</P>
 <p>build your own app</p>
 <p>we create it for you</p>
