--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADAMBERE</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
-<body style="background-color:#f5f5f5;">
+<body>
 <H1>ADAMBERE</H1>
-<img src="IMAGE/iphone_pro-01de.jpg" alt="">
+<img class="imageipon" src="IMAGE/iphone_pro-01de.png" alt="IMAGE"> 
 <P>create new apps here</P>
 <p>build your own app</p>
 <p>we create it for you</p>
+</body>
