--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
 </head>
 <body>
+<div>
 <H1>ADAMBERE</H1>
+</div>
 <img class="imageipon" src="IMAGE/iphone_pro-01de.png" alt="IMAGE"> 
-<P>create new apps here</P>
-<p>build your own app</p>
-<p>we create it for you</p>
+<P>Build Your App</P>
+<p>contact :919633060453</p>
+<a href="mailto:nuhmannunnu312@gmail.com">Send mail</a>
+
 </body>
