--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADAMBERE</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="IMAGE/favicon.ico">
 
 </head>
 <body>
