--- a/certificates.html
+++ b/certificates.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Certificates</title>
+    <title>ADAMBERE</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.html">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/android.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.html">
@@ -32,19 +32,19 @@
     <link rel="stylesheet" href="assets/css/Swiper-Slider-Card-For-Blog-Or-Product.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="home.html"><strong><img src="sign.png" width="200"></strong><br></a><button class="navbar-toggler" data-toggle="collapse"
+<body class="home-bdy">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark portfolio-navbar ">
+        <div class="container"><a class="navbar-brand logo" href="home.html"><strong><img src="ADAMBERE-1.png" width="200"></strong><br></a><button class="navbar-toggler" data-toggle="collapse"
                 data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="home.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="worksamples.html">Work
-                            Samples</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="worksamples.html">App
+                            Development</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active"
-                            href="certificates.html">Certificates</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="resume.pdf">Resume</a></li>
+                            href="certificates.html">Web Development</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="mailto:nuhmannunnu312@gmail.com">contact</a></li>
                 </ul>
             </div>
         </div>
@@ -288,7 +288,7 @@
     </main>
     <footer class="page-footer">
         <p class="text-center" style="margin-top:30px;margin-bottom:15px;">
-        <a href="https://www.instagram.com/_abhishek_doshi/" style="font-size:35px;"><i class="fa fa-instagram"
+        <a href="https://www.instagram.com/ada_mbere/" style="font-size:35px;"><i class="fa fa-instagram"
                 style="color:rgb(0,0,0);margin-right:0px;"></i></a>
         <a href="https://twitter.com/AbhishekDoshi26" style="font-size:35px;"><i class="icon ion-social-twitter"
                 style="color:rgb(0,0,0);"></i></a>
@@ -296,9 +296,8 @@
                 class="icon ion-social-linkedin" style="color:rgb(0,0,0);"></i></a>
         <a href="https://github.com/AbhishekDoshi26" style="font-size:35px;"><i class="fa fa-github"
                 style="color:rgb(0,0,0);"></i></a>
-                <h6 style="color: grey;">Forked from<a href="https://github.com/Jainal09" style="color: blue;font-size: medium;">Jainal Gosaliya</a></h6>
-                <h6 style="color: grey;">Content Copyright&copy; by Abhishek Doshi</h6>
-
+                <h6 style="color: grey;">adambere<a href="adamberesoftwares@gmail.com" style="color: blue; font-size: medium;">adamberesoftwares</a></h6>
+                <h6 style="color: grey;">Content Copyright&copy; by Adambere Softwares</h6>
         </p>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
